# jupyter_lab_kubernetes

./: Dockerfile  Makefile  README.md  pyproject.toml
helm/: Chart.yaml  Chart.yaml-E
helm/templates/: deployment.yaml  ingress.yaml  service.yaml
src/jupyter_lab_kubernetes/: jupyter_notebook_config.py
